Give bold real meaning: use bright colors instead of bold for brightness (#163)
* Give bold real meaning: use bright colors instead of bold for brightness

* Refactor `ColorTheme` color definitions and streamline active label rendering logic in `TEditColorThemeWindow`.

* Simplify `ColorTheme` by removing unnecessary `bold` attribute from color definitions and introduce constants for SGR codes in `SgrUtil` for cleaner handling.

* Update bold attribute handling and color theme definitions

- Adjusted the bold attribute to emit proper ANSI SGR codes (`ESC[1m`) and prevent auto-brightening behavior, aligning with the new `casciian.treatBoldAsBright` property for legacy support.
- Updated `ColorTheme` files to replace `bold` with `bright` in color definitions to reflect the updated behavior.
- Enhanced code documentation in `ColorTheme.java` for readability.
- Fixed text alignment issues in `DemoTextFieldWindowBundle` and its localizations.
- Refactored `TTextAnsi` rendering logic to account for updated `bold` handling.

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: Carlos Ramirez <crramirez@gmail.com>
Co-authored-by: Carlos Rafael Ramirez <crramirez@users.noreply.github.com>
Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>